--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             <div class="d-flex align-items-center">
               <div class="col-7 p-0">
                 <a
-                  href="https://sitio-web-bibliocucuta.vercel.app/Html/bibliocucuta.html"
+                  href="https://bibliocucuta.org/biblioteca/Html/bibliocucuta.php"
                   class="card-title title"
                   target="_blank"
                   >Sitio Web Biblioteca Pública Julio Pérez Ferrero</a
@@ -302,7 +302,7 @@
               </div>
               <div class="col-3 align-middle">
                 <a
-                  href="https://sitio-web-bibliocucuta.vercel.app/Html/bibliocucuta.html"
+                  href="https://bibliocucuta.org/biblioteca/Html/bibliocucuta.php"
                   class="btn_portfolio btn_portfolio-sm primary-bg-btn rounded-5"
                   target="_blank"
                   >Visitar <i class="bi bi-arrow-up-right-circle-fill"></i
@@ -318,7 +318,7 @@
           <div class="banner-container">
             <div class="overlay">
               <a
-                href="https://sitio-web-bibliocucuta.vercel.app/Html/bibliocucuta.html"
+                href="https://bibliocucuta.org/biblioteca/Html/bibliocucuta.php"
                 class="btn_portfolio"
                 target="_blank"
                 ><i class="bi bi-arrow-up-right-circle-fill"></i
