--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
         <!-- add link for your CV into `href` -->
         <a
-          href="assets/pdfs/Hoja de vida Marbelssa Villamizar.pdf"
+          href="assets/pdfs/CV - Ing Marbelssa Villamizar Vega.pdf"
           class="btn"
           target="_blank"
           >Descargar CV</a
